api for user done
