# server/model/user.go
@@ -10,6 +10,7 @@ type User struct {
 	UserName  string             `json:"UserName" bson:"UserName" example:"kieuchicong"`
 	RoleCode  string             `json:"RoleCode" bson:"RoleCode" example:"admin" `
 	FullName  string             `json:"FullName" bson:"FullName" example:"Kiều Chí Công"`
+	Phone     string             `json:"Phone" bson:"Phone" example:"0795048768"`
 	PassWord  string             `json:"PassWord" bson:"PassWord" example:"abc123"`
 	Email     string             `json:"Email" bson:"Email" example:"example@gmail.com" `
 	Status    bool               `json:"Status" bson:"Status" example:"true"`
@@ -23,6 +24,7 @@ type UserInfo struct {
 	FullName string             `json:"FullName" bson:"FullName" example:"Kiều Chí Công"`
 	PassWord string             `json:"PassWord" bson:"PassWord" example:"abc123"`
 	Email    string             `json:"Email" bson:"Email" example:"example@gmail.com"`
+	Phone    string             `json:"Phone" bson:"Phone" example:"0795048768"`
 }
 
 type CreateUserPayload struct {
@@ -36,11 +38,24 @@ type LoginPayload struct {
 	PassWord string `json:"PassWord" bson:"PassWord" example:"abc123"`
 }
 
+type UpdateUserInfo struct {
+	FullName string `json:"FullName" bson:"FullName" example:"Kiều Chí Công"`
+	Email    string `json:"Email" bson:"Email" example:"example@gmail.com"`
+	Phone    string `json:"Phone" bson:"Phone" example:"0795048768"`
+}
+
+type ChangePass struct {
+	OldPass string `json:"OldPass" example:"abc@123"`
+	NewPass string `json:"NewPass" example:"abc@124"`
+}
+
+
 type UserRepositoryInterface interface {
 	MakeIndexes()
 	Insert(user *User) (insertResponse *InsertResponse, httpCode int)
 	Update(code string, user *User) (updateResponse *UpdateResponse, httpCode int)
 	GetAll(page, pageSize int) (GetManyResponse *GetManyResponse, totalResult int, httpCode int)
 	GetByCode(code string) (getOne *GetOneResponse, httpCode int)
-	Login(username string, password string) (updateResponse *GetOneResponse, httpCode int)
+	Login(username string, password string) (response *GetOneResponse, httpCode int)
+	ChangePass(newPass string, userCode string) (response *GetOneResponse, httpCode int)
 }
