# server/service/user.go
@@ -8,8 +8,12 @@ type userService struct {
 	userRepository model.UserRepositoryInterface
 }
 
+func (u userService) ChangePass(newPass string, userCode string) (response *model.GetOneResponse, httpCode int) {
+	return u.userRepository.ChangePass(newPass, userCode)
+}
+
 func (u userService) MakeIndexes() {
- u.userRepository.MakeIndexes()
+	u.userRepository.MakeIndexes()
 }
 
 func (u userService) Insert(user *model.User) (insertResponse *model.InsertResponse, httpCode int) {
@@ -18,20 +22,19 @@ func (u userService) Insert(user *model.User) (insertResponse *model.InsertRespo
 }
 
 func (u userService) Update(code string, user *model.User) (updateResponse *model.UpdateResponse, httpCode int) {
-	panic("implement me")
+	return u.userRepository.Update(code, user)
 }
 
 func (u userService) GetAll(page, pageSize int) (GetManyResponse *model.GetManyResponse, totalResult int, httpCode int) {
-	panic("implement me")
+	return u.userRepository.GetAll(1, 20)
 }
 
 func (u userService) GetByCode(code string) (getOne *model.GetOneResponse, httpCode int) {
-	panic("implement me")
+	return u.userRepository.GetByCode(code)
 }
 
 func (u userService) Login(username string, password string) (updateResponse *model.GetOneResponse, httpCode int) {
-	updateResponse, httpCode = u.userRepository.Login(username, password)
-	return updateResponse, httpCode
+	return u.userRepository.Login(username, password)
 }
 
 func NewUser(repository model.UserRepositoryInterface) model.UserRepositoryInterface {
